# gwm

./: .travis.yml  AUTHORS  Copyright  INSTALL  Makefile.am  Makefile.in  README  README.org  TODO  acconfig.h  aclocal.m4  configure  configure.in  todo
doc/: DOCUM  gwm-2.0-manual.txt  quickstart.txt
scm/: Makefile.am  Makefile.in  Makefile.in~  advice.scm  aquax-window.scm  bind-key.scm  custom-menu.scm  defaultmenurc.scm  dialogue.scm  discrete-window.scm  discrete.scm  edit-plug.scm  etheme-compile.scm  fast.scm  flet.scm  focus.scm  fvwm-icon.scm  fvwm-menu.scm  fvwm-window.scm  fvwm.scm  gnome.scm  gwm-menu-method  gwm.scm  gwmrc.scm.template  icon-mgr.scm  iconify2.xbm  init-config.scm  keyfocus.scm  menu-func.scm  menurc.scm.template  multimenu.scm  panel-window.scm  parse.scm  pick.scm  placements.scm  popups.scm  resize2.xbm  room-mgr.scm  rooms.scm  stack-mgr.scm  (+14 more)
scm/aquax-window/: border_b-active.xpm  border_b-inactive.xpm  border_bl-active.xpm  border_bl-inactive.xpm  border_br-active.xpm  border_br-inactive.xpm  border_pixel-active.xpm  border_pixel-inactive.xpm  button-inactive.xpm  close-active.xpm  close-clicked.xpm  close-highlight.xpm  close-inactive-clicked.xpm  close-inactive-highlight.xpm  iconify-active.xpm  iconify-clicked.xpm  iconify-highlight.xpm  iconify-inactive-clicked.xpm  iconify-inactive-highlight.xpm  maximize-active.xpm  maximize-clicked.xpm  maximize-highlight.xpm  maximize-inactive-clicked.xpm  maximize-inactive-highlight.xpm  one_window-clicked.xpm  one_window-focused-inactive.xpm  one_window-highlight.xpm  one_window-inactive-clicked.xpm  one_window-inactive-highlight.xpm  title-active.xpm  title-inactive.xpm  title_l-active.xpm  title_l-inactive.xpm  title_ls-active.xpm  title_ls-inactive.xpm  title_r-active.xpm  title_r-inactive.xpm  title_rs-active.xpm  title_rs-inactive.xpm
scm/demo/: caleido.scm  clip-window.scm  copy.scm  cycle.scm  feedback.scm  gwmexecute.scm  pie-menu.scm  timer.scm  tooltip.scm
src/: #gww.cc.attempt#  #notes_gww#  Makefile.am  Makefile.in  Makefile.in.ok  active.cc  active.hh  client.cc  client.cc.debug  client.hh  cursor.cc  cursor.hh  deco.cc  deco.hh  decofunc.cc  def_bitmap.h  drawing.cc  drawing.hh  error.cc  error.hh  event.cc  event.hh  feedback.cc  font.cc  font.hh  fsm.cc  fsm.hh  gwm-guile-doc-snarf  gwm-only  gwm.cc  gwm.hh  gwmconfig.h.in  gwmfunc.cc  gwmfunc.hh  gwmlog  kladd.txt  kladd2.txt  paint.cc  paint.hh  screen.cc  (+4 more)
